# libv4l2_opencv_mat

./: CMakeLists.txt  README.md  test.cpp
inc/: V4l2Capture.h  V4l2Device.h  logger.h
src/: V4l2Capture.cpp  V4l2Device.cpp
